inventory/vdmitriev-sbx.local/custom_scripts/k8s/test-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    app: test-svc-app
spec:
  selector:
    app: test-container-app
  ports:
  - port: 80
    protocol: TCP
  type: LoadBalancer
