inventory/vdmitriev-sbx.local/custom_scripts/k8s/test-svc-ing.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    app: test-container
spec:
  selector:
    app: test-container
  ports:
  - port: 80
    protocol: TCP
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  labels:
    app: test-container
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress-controller.k8s-sbx.rfiserve.net
spec:
  rules:
  - host: app.k8s-sbx.rfiserve.net
    http:
      paths:
      - backend:
          serviceName: test-service
          servicePort: 80
